scrollbar for left-menu and minor docs fixes
- Fix scrollbar on left-menu
- Update Modus Icons Version to 0.5.1
- Update Radio Button links

--- a/assets/styles/_menu-left.scss
+++ b/assets/styles/_menu-left.scss
@@ -1,9 +1,13 @@
 @media (min-width: 768px) {
-  .bd-links {
+  #docs-nav {
     display: block !important;
   }
   .menu-left .sticky-top {
     border-bottom: 0 !important;
+  }
+  .sticky-offset {
+    overflow-y: auto;
+    max-height: 90vh;
   }
 }
 
